<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="98dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/title"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="280dp"
            android:layout_height="28dp"
            android:layout_marginTop="212dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@color/edit_text"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="280dp"
            android:layout_height="28dp"
            android:layout_marginTop="274dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@color/edit_text"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="28dp"
            android:layout_marginTop="335dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/edit_text"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_in_btn"
            style="@android:style/Widget.Button"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="396dp"
            android:background="@drawable/button"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/button_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-140dp"
            android:layout_marginTop="454dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="132dp"
                android:layout_height="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_little"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/log_in_btn"
                android:layout_width="35dp"
                android:layout_height="16dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/hypertext"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:layout_width="152dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="-86dp"
            android:layout_marginTop="538dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="143dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="-85dp"
            android:layout_marginTop="596dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sign_in_with_apple"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_apple"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>