<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_toolbar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Trade by "
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="bata"
            android:textColor="@color/button_text_background"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_toolbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/ic_round"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/profile"
            tools:clipToOutline="true" />

        <TextView
            android:id="@+id/location_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:fontFamily="@font/poppins"
            android:text="@string/location"
            android:textColor="#5B5B5B"
            android:textSize="10sp"
            app:drawableRightCompat="@drawable/ic_bottom_arrow" />
    </LinearLayout>

</androidx.appcompat.widget.Toolbar>