<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">

    <ImageView
        android:id="@+id/image_flash"
        android:layout_width="174dp"
        android:layout_height="221dp"
        android:background="@drawable/rounded_corners_big"
        android:contentDescription="@string/product_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:clipToOutline="true"
        tools:src="@color/purple_500" />

    <ImageView
        android:id="@+id/seller"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/ic_round"
        android:contentDescription="@string/seller_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:clipToOutline="true"
        tools:src="@drawable/profile" />

    <TextView
        android:id="@+id/discount_flash"
        android:layout_width="49dp"
        android:layout_height="18dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/discount_box"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="30% off" />

    <TextView
        android:id="@+id/category_flash"
        android:layout_width="50dp"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="121dp"
        android:background="@drawable/category_box"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:textColor="#070604"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="kids" />

    <TextView
        android:id="@+id/name_flash"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="New balance sneakers" />

    <TextView
        android:id="@+id/price_flash"
        android:layout_width="43dp"
        android:layout_height="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="$ 33,00" />

    <ImageView
        android:id="@+id/liked_btn_flash_sale"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="183dp"
        android:background="@drawable/ic_liked_btn"
        android:contentDescription="@string/add_to_favorites_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_to_cart_btn_flash_sale"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="179dp"
        android:background="@drawable/ic_add_to_cart"
        android:contentDescription="@string/add_to_cart_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>