<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/left_arrow_profile"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="17dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/ic_round"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:clipToOutline="true" />

        <TextView
            android:id="@+id/change_photo"
            android:layout_width="69dp"
            android:layout_height="11dp"
            android:layout_marginTop="119dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/change_photo"
            android:textColor="@color/text_little"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="168dp"
            android:layout_height="17dp"
            android:layout_marginTop="145dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="Satria Adhi Pradana"
            android:textColor="@color/profile_name"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="195dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/upload_btn"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:contentDescription="@string/upload_item" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_upload" />

                <TextView
                    android:layout_width="132dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/upload_item"
                    android:textColor="@color/button_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="250dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bank_card" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/trade_store"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="310dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bank_card" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/payment_method"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="370dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bank_card" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/balance"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"
                android:text="$1593"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="430dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bank_card" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/trade_history"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="490dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_restore" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/restore_purchase"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="550dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_help" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/help"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_out"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="610dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_round" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_log_out" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/log_out"
                android:textColor="@color/profile_text"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>